--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="/__/firebase/8.2.6/firebase-app.js"></script>
+    <script src="/__/firebase/8.2.6/firebase-auth.js"></script>
+    <script src="/__/firebase/init.js?useEmulator=true"></script>
   </body>
 </html>
